--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
       <artifactId>poi-ooxml</artifactId>
       <version>3.9</version>
     </dependency>
+    <dependency>
+      <groupId>org.freemarker</groupId>
+      <artifactId>freemarker</artifactId>
+      <version>2.3.23</version>
+    </dependency>
   </dependencies>
 </project>
