--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
                     <shadedClassifierName>shaded</shadedClassifierName>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>com.howtodoinjava.Main</mainClass>
+                            <mainClass>ru.ntmedia.App</mainClass>
                         </transformer>
                     </transformers>
                 </configuration>
@@ -115,9 +115,8 @@
                             <downloadUrl>http://java.com/download</downloadUrl>
                             <classPath>
                                 <mainClass>ru.ntmedia.App</mainClass>
-                                <preCp></preCp>
                             </classPath>
-                            <!--<icon>application.ico</icon>-->
+                            <icon>${project.basedir}/src/main/resources/convert.ico</icon>
                             <jre>
                                 <minVersion>1.7.0</minVersion>
                                 <jdkPreference>preferJre</jdkPreference>
