--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
                         </goals>
                         <configuration>
                             <headerType>gui</headerType>
-                            <jar>${project.build.directory}/${artifactId}-${version}-shaded.jar</jar>
+                            <jar>${project.build.directory}/${project.artifactId}-${project.version}-shaded.jar</jar>
                             <outfile>${project.build.directory}/Xlsx2Html.exe</outfile>
                             <downloadUrl>http://java.com/download</downloadUrl>
                             <classPath>
@@ -154,21 +154,9 @@
             <version>3.9</version>
         </dependency>
         <dependency>
-            <groupId>org.freemarker</groupId>
-            <artifactId>freemarker</artifactId>
-            <version>2.3.23</version>
-        </dependency>
-        <dependency>
             <groupId>com.intellij</groupId>
             <artifactId>forms_rt</artifactId>
             <version>7.0.3</version>
         </dependency>
-        <!--
-            <dependency>
-              <groupId>net.sf.launch4j</groupId>
-              <artifactId>launch4j</artifactId>
-              <version>3.8.0</version>
-            </dependency>
-        -->
     </dependencies>
 </project>
